@@ -2,14 +2,15 @@ package com.liu.springboot.quickstart.util;
 
 import java.security.Key;
 import java.security.SecureRandom;
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 
 import com.liu.springboot.quickstart.config.ConstantsConfig;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class DESUtils {
 
@@ -33,13 +34,15 @@ public class DESUtils {
      * @return
      */
     public static String getEncryptString(String str) {
-        BASE64Encoder base64en = new BASE64Encoder();
+    	Encoder encoder = Base64.getEncoder();
+    	//在jdk1.9中已经废除
+        //BASE64Encoder base64en = new BASE64Encoder();
         try {
             byte[] strByte = str.getBytes("UTF-8");
             Cipher cipher = Cipher.getInstance("DES");
             cipher.init(Cipher.ENCRYPT_MODE, key);
             byte[] encryptStrBytes = cipher.doFinal(strByte);
-            return base64en.encode(encryptStrBytes);
+            return encoder.encodeToString(encryptStrBytes);
         } catch (Exception e) {
             // TODO: handle exception
             throw new RuntimeException(e);
@@ -51,9 +54,11 @@ public class DESUtils {
      * @return
      */
     public static String getDecryptString(String str) {
-        BASE64Decoder base64de = new BASE64Decoder();
+    	Decoder decoder = Base64.getDecoder();
+    	//在jdk1.9中已经废除
+        //BASE64Decoder base64de = new BASE64Decoder();
         try {
-            byte[] strbyte = base64de.decodeBuffer(str);
+            byte[] strbyte = decoder.decode(str);
             Cipher cipher = Cipher.getInstance("DES");
             cipher.init(Cipher.DECRYPT_MODE, key);
             byte[] decryptStrBytes = cipher.doFinal(strbyte);
